--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+node_modules/
+.pnp/
+.pnp.js
 
 # testing
-/coverage
+coverage/
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build/
+dist/
 
 # misc
 .DS_Store
@@ -41,8 +37,6 @@ yarn-error.log*
 next-env.d.ts
 
 # Tempo
-
-node_modules/
 **/tempobook/dynamic/
 **/tempobook/storyboards/
 
@@ -50,3 +44,25 @@ node_modules/
 .git
 
 .github/
+
+# Environment Variables
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs and editors
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Supabase
+.supabase/
+
+# Logs
+logs
+*.log
+
+# Cache
+.cache/
+.eslintcache
