--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "dotenv": "^17.0.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.468.0",
     "next": "14.2.23",
