--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.468.0",
     "next": "14.2.23",
     "next-themes": "^0.2.1",
+    "plotly": "^1.0.6",
     "prettier": "^3.3.3",
     "radix-ui": "^1.1.3",
     "react": "^18",
